--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -29,5 +29,8 @@
     }
   }
   @import (less) "tmp.css";
+  [sxt-main-viewer] .sx-toolbar[gn-localisation-input] {
+    width: 15em;
+  }
 }
 @import 'gn_popover.less';
